Scaling whitespace fix

--- a/static/style.css
+++ b/static/style.css
@@ -194,6 +194,7 @@ a {
 .scale-wrapper {
 	overflow-x: hidden;
 	text-align: center;
+    overflow: hidden;
 }
 
 .scale-inner {
